--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.28.4",
+    "autoprefixer": "^10.4.19",
     "next": "^14.2.3",
+    "postcss": "^8.4.39",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "tailwindcss": "^3.4.4",
     "viem": "2.9.31",
     "wagmi": "^2.9.2"
   },
